client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .slant-section {
    clip-path: polygon(0 0, 60% 0, 100% 100%, 0 100%);
    -webkit-clip-path: polygon(0 0, 60% 0, 100% 100%, 0 100%);
    width: 100%;
    max-width: 40rem;
  }
}

html,
* {
  --scroll-behavior: smooth !important;
  scroll-behavior: smooth !important;
}

@media (max-width: 768px) {
  .hero-image {
    object-position: center center;
  }

  .slant-section {
    clip-path: none;
    -webkit-clip-path: none;
  }
}

